--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <!--//theme style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Goaway Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="Goaway" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 <script src="js/jquery.min.js"></script>
@@ -28,7 +27,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="container">
 		 <div class="logo">
 			 <h1><a href="index.html"><i class="fa fa-globe"></i> Home</a></h1>
-		 </div>		 
+		 </div>
 	 </div>
 </div>
 <!---->
@@ -42,9 +41,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-				</button>				
+				</button>
 			 </div>
-			 <!--/navbar header-->		
+			 <!--/navbar header-->
 			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav">
 					 <li class="active"><a href="index.html">Home</a></li>
@@ -56,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a class="scroll" href="#destination">Awesome Openstack</a></li>
 							<li><a class="scroll" href="#destination">Raspberry Pi</a></li>
 						</ul>
-					 </li>					
+					 </li>
 					 <li><a href="pages/presentation.html">Presentations</a></li>
 					 <li><a href="pages/gallery.html">Gallery</a></li>
 					 <!--<li><a href="pages/typo.html"></a></li>-->
@@ -65,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			  <!--/navbar collapse-->
 		 </nav>
-		  <!--/navbar-->		 
+		  <!--/navbar-->
 	  </div>
 	 <div class="clearfix"></div>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -122,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---->
 <div class="choose">
 	 <h3>I am </h3>
-	 <div class="container">		 
+	 <div class="container">
 		 <div class="choos-girds">
 			 <div class="col-md-4 choos-grid">
 				 <i class="fa fa-github fa-5x"></i>
@@ -152,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <p></p>
 		 </div>
 		 <div class="testi-slider">
-		 
+
 		 <script>
 						// You can also use "$(window).load(function() {"
 						$(function () {
@@ -170,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							  $('.events').append("<li>after event fired.</li>");
 							}
 						  });
-					
+
 						});
 		 </script>
 		 <div  id="top" class="callbacks_container">
@@ -180,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						 <div class="testimonial-left">
 							 <img src="images/t1.jpg" alt="" />
 						 </div>
-						 <div class="testimonial-right">								
+						 <div class="testimonial-right">
 								<p><span>"</span> Coming Soon<span>"</span>
 								</p>
 								<h5>Mary Wilson</h5>
@@ -208,7 +207,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						 <div class="testimonial-left">
 							 <img src="images/t2.jpg" alt="" />
 						 </div>
-						 <div class="testimonial-right">								
+						 <div class="testimonial-right">
 								<p><span>"</span> L<span>"</span>
 								</p>
 								<h5>Andrea</h5>
@@ -237,14 +236,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 <h6><a href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank"><i class="fa fa-globe-3x"></i></a>
 					 	<a href="http://github.com/ramitsurana/awesome-kubernetes" target="_blank"><i class="fa fa-github-alt-2x"></i></a>
 					 </h6>
-					 <p>I have created an awesome list of Kubernetes resources.Do chek it out.</p>
+					 <p>I have created an awesome list of Kubernetes resources.</p>
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
 				   <a class="example-image-link" href="images/d2.jpg" data-lightbox="example-set"><img class="example-image" src="images/d2.jpg" alt=""/></a>
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/awesome-openstack" target="_blank">Awesome Openstack</a></h5>
-					 <p>I have created an awesome list of Kubernetes resources.Do chek it out</p>
+					 <p>I have created an awesome list of Openstack resources.</p>
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
@@ -256,15 +255,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 			 <div class="clearfix"></div>
 		 </div>
-		 <!--
 		 <div class="destintn-grids">
 			 <div class="col-md-4 desti-grid">
-				 <a class="example-image-link" href="images/d4.jpg" data-lightbox="example-set"><img class="example-image" src="images/d4.jpg" alt=""/></a>
+				 <a class="example-image-link" href="images/d4.png" data-lightbox="example-set"><img class="example-image" src="images/d4.png" alt="hacks"/></a>
 				 <div class="desti-info">
-					 <h5><a href="#">Nullam finibus enim tellus</a></h5>
-					 <p>Aliquam sagittis nunc eu nibh feugiat, ac bibendum massa feugiat. Class aptent taciti sociosqu ad litora torquent nostra.</p>
+					 <h5><a href="http://ramitsurana.github.io/hacks" target='_blank'>Hacks</a></h5>
+					 <p>A cool collection of awesome hacks on a variety of stuff.</p>
 				 </div>
 			 </div>
+			 <!--
 			 <div class="col-md-4 desti-grid">
 				 <a class="example-image-link" href="images/d5.jpg" data-lightbox="example-set"><img class="example-image" src="images/d5.jpg" alt=""/></a>
 				 <div class="desti-info">
@@ -292,8 +291,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="col-md-6 news-ltr">
 				 <h4>Mail Me !!</h4>
 				 <p></p>
-				 <form>					 
-					  <input type="text" class="text" value="Enter Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Email';}">
+				 <form>
+					  <input type="text" class="text" value="Your Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Message';}">
 					 <input type="submit" value="Mail Me!!">
 					 <div class="clearfix"></div>
 				 </form>
@@ -301,17 +300,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="col-md-6 ftr-grid1">
 				 <h4>Connect with me on my network !!</h4>
 				 <p></p>
-				 <div class="social">							
+				 <div class="social">
 					<a href="https://facebook.com/ramitsurana" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
 					<a href="https://twitter.com/ramitsurana" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
-					<a href="https://github.com/ramitsurana" target="_blank"><i class="fa fa-github-alt fa-lg"></i></a>	
-					<a href="https://plus.google.com/+RamitSurana96" target="_blank"><i class="fa fa-google-plus fa-lg"></i></a>	
+					<a href="https://github.com/ramitsurana" target="_blank"><i class="fa fa-github-alt fa-lg"></i></a>
+					<a href="https://plus.google.com/+RamitSurana96" target="_blank"><i class="fa fa-google-plus fa-lg"></i></a>
 					<a href="https://linkedin.com/in/ramitsurana" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
 					<a href="https://youtube.com/ramitsurana" target="_blank"><i class="fa fa-youtube fa-lg"></i></a>
 			      </div>
-			 </div>			 
+			 </div>
 			 <div class="clearfix"></div>
-		 </div>		 
+		 </div>
 	 </div>
 </div>
 
@@ -330,7 +329,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
-				$(".scroll").click(function(event){		
+				$(".scroll").click(function(event){
 					event.preventDefault();
 					$('html,body').animate({scrollTop:$(this.hash).offset().top},900);
 				});
@@ -344,7 +343,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				containerID: 'toTop', // fading element id
 				containerHoverID: 'toTopHover', // fading element hover id
 				scrollSpeed: 1200,
-				easingType: 'linear' 
+				easingType: 'linear'
 				};
 				*/
 		$().UItoTop({ easingType: 'easeOutQuart' });
@@ -352,6 +351,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </script>
 <a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!---->
-<script src="js/responsiveslides.min.js"></script> 
+<script src="js/responsiveslides.min.js"></script>
 </body>
 </html>
