--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 			 <div class="col-md-4 desti-grid">
 				 <a class="example-image-link" href="images/d4.png" data-lightbox="example-set"><img class="example-image" src="images/d4.png" alt="hacks"/></a>
 				 <div class="desti-info">
-					 <h5><a href="http://ramitsurana.github.io/hacks" target='_blank'>Hacks</a></h5>
+					 <h5><a href="http://coolhacks.github.io" target='_blank'>Cool Hacks</a></h5>
 					 <p>A cool collection of awesome hacks on a variety of stuff.</p>
 				 </div>
 			 </div>
