--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 					 <li class="dropdown">
 						<a href="#" class="scroll dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a class="scroll" href="#destination">Awesome Kubernetes</a></li>
-							<li><a class="scroll" href="#destination">Awesome Openstack</a></li>
-							<li><a class="scroll" href="#destination">Raspberry Pi</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-kubernetes" target='_blank'>Awesome Kubernetes</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-openstack" target='_blank'>Awesome Openstack</a></li>
+							<li><a class="scroll" href="#destination" target='_blank'>Raspberry Pi</a></li>
+							<li><a class="scroll" href="http://coolhacks.github.io" target='_blank'>Coolhacks</a></li>
 						</ul>
 					 </li>
 					 <li><a href="pages/presentation.html">Presentations</a></li>
@@ -257,7 +258,7 @@
 		 </div>
 		 <div class="destintn-grids">
 			 <div class="col-md-4 desti-grid">
-				 <a class="example-image-link" href="images/d4.png" data-lightbox="example-set"><img class="example-image" src="images/d4.png" alt="hacks"/></a>
+				 <a class="example-image-link" href="images/d4.jpg" data-lightbox="example-set"><img class="example-image" src="images/d4.png" alt="hacks"/></a>
 				 <div class="desti-info">
 					 <h5><a href="http://coolhacks.github.io" target='_blank'>Cool Hacks</a></h5>
 					 <p>A cool collection of awesome hacks on a variety of stuff.</p>
