new badges and improvements

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="top-header">
 	 <div class="container">
 		 <div class="logo">
-			 <h1><a href="index.html"><i class="fa fa-globe"></i> Home</a></h1>
+			 <h1><a href="index.html"><i class="fa fa-home"></i> Home</a></h1>
 		 </div>
 	 </div>
 </div>
@@ -51,10 +51,10 @@
 					 <li class="dropdown">
 						<a href="#" class="scroll dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-kubernetes" target='_blank'>Awesome Kubernetes</a></li>
-							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-openstack" target='_blank'>Awesome Openstack</a></li>
-							<li><a class="scroll" href="#destination" target='_blank'>Raspberry Pi</a></li>
-							<li><a class="scroll" href="http://coolhacks.github.io" target='_blank'>Coolhacks</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Kubernetes</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-openstack" target="_blank">Awesome Openstack</a></li>
+							<li><a class="scroll" href="#destination" target="_blank">Raspberry Pi</a></li>
+							<li><a class="scroll" href="http://coolhacks.io" target="_blank">Cool Hacks</a></li>
 						</ul>
 					 </li>
 					 <li><a href="pages/presentation.html">Presentations</a></li>
@@ -84,7 +84,7 @@
 						 <li><a href="#"></a></li>
 						 <li><a href="#"></a></li>
 					 </ul>
-					 <span class="glyphicon1 glyphicon-globe" aria-hidden="true"></span>
+					 <span class="glyphicon1 glyphicon-globe glyphicon-spin" aria-hidden="true"></span>
 				 </div>
 			 </div>
 			 <div class="col-md-6 banner-grid">
@@ -111,9 +111,22 @@
 			  </div>
 			  <div class="col-md-6 wel-info">
 				 <h2>Welcome Here !</h2>
+				 <br>
+				 <i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i>
 				 <p>Dreamers are mocked as impractical. The truth is they are the most practical, as their innovations lead to progress and a better way of life for all of us.”
 				 </p>
 				 <h4>Robin Sharma</h4>
+				 <p>Welcome to my home.Please feel free to explore the website,if you are looking to view and follow up
+				 my recent activities checkout:<br><br>
+				 <!-- Place this tag where you want the button to render. -->
+				 <a class="github-button" href="https://github.com/ramitsurana" data-count-href="/ramitsurana/followers" data-count-api="/users/ramitsurana#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @ramitsurana on GitHub">Follow @ramitsurana</a>
+				 <!-- Place this tag right after the last button or just before your close body tag. -->
+				 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+				 <a href="https://twitter.com/ramitsurana" class="twitter-follow-button" data-show-count="false">Follow @ramitsurana</a>
+				 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+				 <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Ramit Surana's profile on LinkedIn">
+				 <a href="https://in.linkedin.com/pub/ramit-surana/87/809/93b">
+	        </a>
 			  </div>
 			  <div class="clearfix"></div>
 		 </div>
@@ -237,14 +250,28 @@
 					 <h6><a href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank"><i class="fa fa-globe-3x"></i></a>
 					 	<a href="http://github.com/ramitsurana/awesome-kubernetes" target="_blank"><i class="fa fa-github-alt-2x"></i></a>
 					 </h6>
-					 <p>I have created an awesome list of Kubernetes resources.</p>
+					 <p>I have created an awesome list of Kubernetes resources.<br><br>
+						 <!-- Place this tag where you want the button to render. -->
+						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes" data-count-href="/ramitsurana/awesome-kubernetes/stargazers" data-count-api="/repos/ramitsurana/awesome-kubernetes#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/awesome-kubernetes on GitHub">Star</a>
+						 <!-- Place this tag where you want the button to render. -->
+						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes/fork" data-count-href="/ramitsurana/awesome-kubernetes/network" data-count-api="/repos/ramitsurana/awesome-kubernetes#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/awesome-kubernetes on GitHub">Fork</a>
+						 <!-- Place this tag where you want the button to render. -->
+						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes" data-count-href="/ramitsurana/awesome-kubernetes/watchers" data-count-api="/repos/ramitsurana/awesome-kubernetes#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/awesome-kubernetes on GitHub">Watch</a>
+					 </p>
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
 				   <a class="example-image-link" href="images/d2.jpg" data-lightbox="example-set"><img class="example-image" src="images/d2.jpg" alt=""/></a>
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/awesome-openstack" target="_blank">Awesome Openstack</a></h5>
-					 <p>I have created an awesome list of Openstack resources.</p>
+					 <p>I have created an awesome list of Openstack resources.<br><br>
+						 <!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack" data-count-href="/ramitsurana/awesome-openstack/stargazers" data-count-api="/repos/ramitsurana/awesome-openstack#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/awesome-openstack on GitHub">Star</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack/fork" data-count-href="/ramitsurana/awesome-openstack/network" data-count-api="/repos/ramitsurana/awesome-openstack#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/awesome-openstack on GitHub">Fork</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack" data-count-href="/ramitsurana/awesome-openstack/watchers" data-count-api="/repos/ramitsurana/awesome-openstack#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/awesome-openstack on GitHub">Watch</a>
+					</p>
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
@@ -258,9 +285,9 @@
 		 </div>
 		 <div class="destintn-grids">
 			 <div class="col-md-4 desti-grid">
-				 <a class="example-image-link" href="images/d4.jpg" data-lightbox="example-set"><img class="example-image" src="images/d4.png" alt="hacks"/></a>
+				 <a class="example-image-link" href="images/d4.png" data-lightbox="example-set"><img class="example-image" src="images/d4.png" alt="hacks"/></a>
 				 <div class="desti-info">
-					 <h5><a href="http://coolhacks.github.io" target='_blank'>Cool Hacks</a></h5>
+					 <h5><a href="http://ramitsurana.github.io/hacks" target='_blank'>Hacks</a></h5>
 					 <p>A cool collection of awesome hacks on a variety of stuff.</p>
 				 </div>
 			 </div>
@@ -307,7 +334,7 @@
 					<a href="https://github.com/ramitsurana" target="_blank"><i class="fa fa-github-alt fa-lg"></i></a>
 					<a href="https://plus.google.com/+RamitSurana96" target="_blank"><i class="fa fa-google-plus fa-lg"></i></a>
 					<a href="https://linkedin.com/in/ramitsurana" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
-					<a href="https://youtube.com/ramitsurana" target="_blank"><i class="fa fa-youtube fa-lg"></i></a>
+					<a href="mailto:ramitsurana@gmail.com" target="_blank"><i class="fa fa-envelope fa-lg"></i></a>
 			      </div>
 			 </div>
 			 <div class="clearfix"></div>
