--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 				 <a href="https://twitter.com/ramitsurana" class="twitter-follow-button" data-show-count="false">Follow @ramitsurana</a>
 				 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-				 <a href="https://in.linkedin.com/pub/ramit-surana/87/809/93b">
+				 <a href="https://in.linkedin.com/pub/ramit-surana/87/809/93b"></a>
 				 <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Ramit Surana's profile on LinkedIn">
 				 <br><h4>Like my work ? Feeling Generous ? Send me a book.Here is my list:</h4>
 				 <a href="http://www.amazon.in/registry/wishlist/52727LHEURQH">Ramit's Wish List</p>
