--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -124,6 +124,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-3 gallery-grid">
 						
+						<iframe src="//www.slideshare.net/slideshow/embed_code/key/iOx3QbqRBVF8s1" width="540" height="190" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ramitsurana/docker-for-the-new-era" title="Docker for the new Era" target="_blank">Docker for the new Era</a> </strong> from <strong><a href="//www.slideshare.net/ramitsurana" target="_blank">Ramit Surana</a></strong> </div>
+						
 					</div>
 					<div class="clearfix"></div>
 				</div>
