--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					 </li>
 					 <li><a href="pages/presentation.html">Presentations</a></li>
 					 <li><a href="pages/gallery.html">Gallery</a></li>
-					 <!--<li><a href="pages/typo.html"></a></li>-->
+					 <li><a href="pages/video.html">Talks</a></li>
 					 <li><a href="pages/contact.html">Contact Me</a></li>
 				 </ul>
 				</div>
