--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 						</ul>
 					 </li>
 					 <li><a href="pages/presentation.html">Presentations</a></li>
-					 <li><a href="pages/gallery.html">Gallery</a></li>
 					 <li><a href="pages/video.html">Talks</a></li>
-					 <li><a href="pages/contact.html">Contact Me</a></li>
+					 <li><a href="pages/gallery.html">Gallery</a></li>
+					 <li><a href="pages/contact.html">Contact</a></li>
 				 </ul>
 				</div>
 			  <!--/navbar collapse-->
