replacing hacks with turbo

--- a/index.html
+++ b/index.html
@@ -289,8 +289,13 @@
 			 <div class="col-md-4 desti-grid">
 				 <a class="example-image-link" href="images/d4.png" data-lightbox="example-set"><img class="example-image" src="images/d4.png" alt="hacks"/></a>
 				 <div class="desti-info">
-					 <h5><a href="http://ramitsurana.github.io/hacks" target='_blank'>Hacks</a></h5>
-					 <p>A cool collection of awesome hacks on a variety of stuff.</p>
+					 <h5><a href="http://ramitsurana.github.io/turbo" target='_blank'>Turbo</a></h5>
+					 <p>A cool collection of awesome hacks on a variety of stuff.</p><br><br>
+					 <a class="github-button" href="https://github.com/ramitsurana/turbo" data-count-href="/ramitsurana/turbo/stargazers" data-count-api="/repos/ramitsurana/turbo#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/turbo on GitHub">Star</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/turbo/fork" data-count-href="/ramitsurana/turbo/network" data-count-api="/repos/ramitsurana/turbo#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/turbo on GitHub">Fork</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/turbo" data-count-href="/ramitsurana/turbo/watchers" data-count-api="/repos/ramitsurana/turbo#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/turbo on GitHub">Watch</a>
 				 </div>
 			 </div>
 			 <!--
