--- a/pages/support.html
+++ b/pages/support.html
@@ -86,9 +86,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="gallery-1">									
 					<div class="col-md-3 gallery-grid">
 						<a class="example-image-link" href="../images/gallery/akshay_patra.png" data-lightbox="example-set"><img class="example-image" src="../images/gallery/akshay_patra.png" alt=""/></a>
-         <h2>It Takes Rs. 950 To Feed A Child For A Year! Donate And Help Change A Life Today!</h2>
+						</div>
+         <h3>It Takes Rs. 950 To Feed A Child For A Year! Donate And Help Change A Life Today!</h3>
          <h3>Click <a href="https://www.akshayapatra.org/onlinedonations" target="_blank"> here </a> to donate</h3>
       </div>
+</div>		
 <script src="../js/lightbox-plus-jquery.min.js"></script>
 <!-- footer -->
 <div class="footer">
