adding ldf and peta

--- a/pages/support.html
+++ b/pages/support.html
@@ -91,7 +91,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          <h4>It Takes Rs. 950 To Feed A Child For A Year! Donate And Help Change A Life Today!</h4>
          <h3>Click <a href="https://www.akshayapatra.org/onlinedonations" target="_blank"> here </a> to donate</h3>
       </div>
-</div>		
+      <br></br>
+	     <h2>Peta </h2>
+		 		<br></br>
+				<div class="gallery-1">									
+					<div class="col-md-3 gallery-grid">
+						<a class="example-image-link" href="../images/gallery/peta.png" data-lightbox="example-set"><img class="example-image" src="../images/gallery/peta.png" alt=""/></a>
+						</div>
+         <h4>Stop Cruelty on Animals, Go vegan!</h4>
+         <h3>Click <a href="http://www.petaindia.com/issues/" target="_blank"> here </a> to contribute</h3>
+      </div>
+</div>
+<br></br>
+	     <h2>Leonardo Di Caprio Foundation </h2>
+		 		<br></br>
+				<div class="gallery-1">									
+					<div class="col-md-3 gallery-grid">
+						<a class="example-image-link" href="../images/gallery/ldf.png" data-lightbox="example-set"><img class="example-image" src="../images/gallery/ldf.png" alt=""/></a>
+						</div>
+         <h4>Finding solutions to restore balance to threatened ecosystems, ensuring the long-term health and well-being of all Earth’s inhabitants.</h4>
+         <h3>Click <a href="http://leonardodicaprio.org" target="_blank"> here </a> to visit</h3>
+      </div>
+</div>
 	</div>	
 <script src="../js/lightbox-plus-jquery.min.js"></script>
 <!-- footer -->
