adding new projects

--- a/index.html
+++ b/index.html
@@ -297,20 +297,29 @@
 					<!-- Place this tag where you want the button to render. -->
 					<a class="github-button" href="https://github.com/ramitsurana/turbo" data-count-href="/ramitsurana/turbo/watchers" data-count-api="/repos/ramitsurana/turbo#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/turbo on GitHub">Watch</a>
 				 </div>
-			 </div>
-			 <!--
+			 </div>			 
 			 <div class="col-md-4 desti-grid">
-				 <a class="example-image-link" href="images/d5.jpg" data-lightbox="example-set"><img class="example-image" src="images/d5.jpg" alt=""/></a>
+				 <a class="example-image-link" href="images/d5.png" data-lightbox="example-set"><img class="example-image" src="images/d5.png" alt=""/></a>
 				 <div class="desti-info">
-					 <h5><a href="#">Nullam finibus enim tellus</a></h5>
-					 <p>Aliquam sagittis nunc eu nibh feugiat, ac bibendum massa feugiat. Class aptent taciti sociosqu ad litora torquent nostra.</p>
+					 <h5><a href="http://ramitsurana.github.io/project1">Project1</a></h5>
+					 <p>Using Ansible to setup Wordpress, MariaDB & ELK Stack to an AWS EC2 instance with Docker Compose</p>
+					 <a class="github-button" href="https://github.com/ramitsurana/project1" data-count-href="/ramitsurana/project1/stargazers" data-count-api="/repos/ramitsurana/project1#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/project1 on GitHub">Star</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/project1/fork" data-count-href="/ramitsurana/project1/network" data-count-api="/repos/ramitsurana/project1#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/project1 on GitHub">Fork</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/project1" data-count-href="/ramitsurana/project1/watchers" data-count-api="/repos/ramitsurana/project1#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/project1 on GitHub">Watch</a>
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
-				 <a class="example-image-link" href="images/d6.jpg" data-lightbox="example-set"><img class="example-image" src="images/d6.jpg" alt=""/></a>
+				 <a class="example-image-link" href="images/d6.png" data-lightbox="example-set"><img class="example-image" src="images/d6.png" alt=""/></a>
 				 <div class="desti-info">
-					 <h5><a href="#">Nullam finibus enim tellus</a></h5>
-					 <p>Aliquam sagittis nunc eu nibh feugiat, ac bibendum massa feugiat. Class aptent taciti sociosqu ad litora torquent nostra.</p>
+					 <h5><a href="http://ramitsurana.github.io/terraform-ansible-setup/">Terraform-Ansible-Setup</a></h5>
+					 <p>Setting up your complete infrastructure on cloud premises using Infrastructure as a Code</p>
+					 <a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup" data-count-href="/ramitsurana/terraform-ansible-setup/stargazers" data-count-api="/repos/ramitsurana/terraform-ansible-setup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/terraform-ansible-setup on GitHub">Star</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup/fork" data-count-href="/ramitsurana/terraform-ansible-setup/network" data-count-api="/repos/ramitsurana/terraform-ansible-setup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/terraform-ansible-setup on GitHub">Fork</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup" data-count-href="/ramitsurana/terraform-ansible-setup/watchers" data-count-api="/repos/ramitsurana/terraform-ansible-setup#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/terraform-ansible-setup on GitHub">Watch</a>
 				 </div>
 			 </div>
 			 <div class="clearfix"></div>
