--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 					 <h5><a href="#">Raspberry Pi</a></h5>
 					 <p>Some of my work on Raspberry Pi.</p>
 				 </div>
-			 </div>
+			 </div>			 
 			 <div class="clearfix"></div>
 		 </div>
 		 <div class="destintn-grids">
@@ -302,7 +302,7 @@
 				 <a class="example-image-link" href="images/d5.png" data-lightbox="example-set"><img class="example-image" src="images/d5.png" alt=""/></a>
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/project1">Project1</a></h5>
-					 <p>Using Ansible to setup Wordpress, MariaDB & ELK Stack to an AWS EC2 instance with Docker Compose</p>
+					 <p>Using Ansible to setup Wordpress, MariaDB & ELK Stack to an AWS EC2 instance with Docker Compose</p>br><br>
 					 <a class="github-button" href="https://github.com/ramitsurana/project1" data-count-href="/ramitsurana/project1/stargazers" data-count-api="/repos/ramitsurana/project1#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/project1 on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
 					<a class="github-button" href="https://github.com/ramitsurana/project1/fork" data-count-href="/ramitsurana/project1/network" data-count-api="/repos/ramitsurana/project1#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/project1 on GitHub">Fork</a>
@@ -314,7 +314,7 @@
 				 <a class="example-image-link" href="images/d6.png" data-lightbox="example-set"><img class="example-image" src="images/d6.png" alt=""/></a>
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/terraform-ansible-setup/">Terraform-Ansible-Setup</a></h5>
-					 <p>Setting up your complete infrastructure on cloud premises using Infrastructure as a Code</p>
+					 <p>Setting up your complete infrastructure on cloud premises using Infrastructure as a Code</p>br><br>
 					 <a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup" data-count-href="/ramitsurana/terraform-ansible-setup/stargazers" data-count-api="/repos/ramitsurana/terraform-ansible-setup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/terraform-ansible-setup on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
 					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup/fork" data-count-href="/ramitsurana/terraform-ansible-setup/network" data-count-api="/repos/ramitsurana/terraform-ansible-setup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/terraform-ansible-setup on GitHub">Fork</a>
@@ -322,9 +322,35 @@
 					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup" data-count-href="/ramitsurana/terraform-ansible-setup/watchers" data-count-api="/repos/ramitsurana/terraform-ansible-setup#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/terraform-ansible-setup on GitHub">Watch</a>
 				 </div>
 			 </div>
-			 <div class="clearfix"></div>
-			-->
-		 </div>
+			 </div>
+		 <div class="destintn-grids">
+			 <div class="col-md-4 desti-grid">
+				   <a class="example-image-link" href="images/d7.png" data-lightbox="example-set"><img class="example-image" src="images/d7.png" alt=""/></a>
+				 <div class="desti-info">
+					 <h5><a href="http://ramitsurana.github.io/the-serverless-setup" target="_blank">The-Serverless-Setup</a></h5>
+					 <p>Setup your entire infrastructure with serverless functions</p><br><br>
+						 <!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup" data-count-href="/ramitsurana/the-serverless-setup/stargazers" data-count-api="/repos/ramitsurana/the-serverless-setup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/the-serverless-setup on GitHub">Star</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup" data-count-href="/ramitsurana/the-serverless-setup/network" data-count-api="/repos/ramitsurana/the-serverless-setup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/the-serverless-setup on GitHub">Fork</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup" data-count-href="/ramitsurana/the-serverless-setup/watchers" data-count-api="/repos/ramitsurana/the-serverless-setup#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/the-serverless-setup on GitHub">Watch</a>
+				 </div>
+			 </div>
+			 <div class="col-md-4 desti-grid">
+				   <a class="example-image-link" href="images/d8.png" data-lightbox="example-set"><img class="example-image" src="images/d8.png" alt=""/></a>
+				 <div class="desti-info">
+					 <h5><a href="http://ramitsurana.github.io/devsecops-practices/" target="_blank">Devsecops Practices</a></h5>
+					 <p>Implementing High Level Security & Testing on different cloud providers like AWS, GCP etc.</p><br><br>
+						 <!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/devsecops-practices/" data-count-href="/ramitsurana/devsecops-practices/stargazers" data-count-api="/repos/ramitsurana/devsecops-practices#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/devsecops-practices on GitHub">Star</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/devsecops-practices/" data-count-href="/ramitsurana/devsecops-practices//network" data-count-api="/repos/ramitsurana/devsecops-practices#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/devsecops-practices on GitHub">Fork</a>
+					<!-- Place this tag where you want the button to render. -->
+					<a class="github-button" href="https://github.com/ramitsurana/devsecops-practices/" data-count-href="/ramitsurana/devsecops-practices/watchers" data-count-api="/repos/ramitsurana/devsecops-practices#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/devsecops-practices on GitHub">Watch</a>
+				 </div>
+			 </div>
+			 <div class="clearfix"></div>					 
 	 </div>
 </div>
 
