replacing video with talks

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						</ul>
 					 </li>
 					 <li><a href="pages/presentation.html">Presentations</a></li>
-					 <li><a href="pages/video.html">Talks</a></li>
+					 <li><a href="pages/video.html">Videos</a></li>
 					 <li><a href="pages/gallery.html">Gallery</a></li>
 					 <li><a href="pages/contact.html">Contact</a></li>
 				 </ul>
@@ -387,7 +387,7 @@
 
 <div class="copywrite">
 	 <div class="container">
-			 <p> © 2016 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+			 <p> © 2014 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
 	 </div>
 </div>
 
