--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,21 +80,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="footer-bottom">
 					<div class="col-md-4 footer-left">
-						<div class="f-1">
+						<!--<div class="f-1">
 							<span class="glyphicon3 glyphicon-earphone" aria-hidden="true"></span>
-							<p>+91 9414310711</p>
-						</div>
+							<p></p>
+						</div>-->
 						<div class="f-1">
 							<a href="#"><span class="glyphicon3 glyphicon-envelope" aria-hidden="true"></span></a>
 							<p><a href="mailto:ramitsurana@gmail.com">ramitsurana@gmail.com</a></p>
 						</div>
 						<div class="f-1">
 							<span class="glyphicon3 glyphicon-map-marker" aria-hidden="true"></span>
-							<p>26,Vidhyut Nagar C,
-								Chitrakoot marg.
-								Ajmer Road,
-								Jaipur.
-								Pin - 302021
+							<p> India							
 							</p>
 						</div>
 					</div>
@@ -117,6 +113,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       var aax_src='302';
     </script>
     <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    <script type="text/javascript" language="javascript">
+      var aax_size='300x250';
+      var aax_pubname = 'ramitsurana-21';
+      var aax_src='302';
+    </script>
+    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>			 
 	</div>
 	 </div>
 </div>
