--- a/pages/video.html
+++ b/pages/video.html
@@ -139,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						
 					<div class="clearfix"></div>
 				</div>
-
+			</div>
 		 </div>
 	 </div>
 </div>	
