--- a/pages/video.html
+++ b/pages/video.html
@@ -124,6 +124,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						
 					<div class="clearfix"></div>
 				</div>
+				<div></div>	
 				<div class="gallery-1">
 					<div class="col-md-3 gallery-grid">
 						
