--- a/pages/contact.html
+++ b/pages/contact.html
@@ -121,6 +121,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>			 
 	</div>
 	 </div>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fg+5r+6l-ft+4e"
+     data-ad-client="ca-pub-8328227831272453"
+     data-ad-slot="9617429092"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <!-- footer -->
 <div class="footer">
