Inproving speed & reducing features

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,10 +3,8 @@
 <head>
 <title>Ramit Surana</title>
 <link href="../css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="../css/lightbox.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<!-- jQuery (necessary JavaScript plugins) -->
-<script src="../js/bootstrap.js"></script>
 <!-- Custom Theme files -->
 <link href="../css/style.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
@@ -18,7 +16,7 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
-<script src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
 </head>
@@ -27,7 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="top-header">
 	 <div class="container">
 		 <div class="logo">
-			 <h1><a href="index.html"><i class="fa fa-globe"></i> Home</a></h1>
+			 <h1><a href="../index.html"><i class="fa fa-home"></i> Home</a></h1>
 		 </div>		 
 	 </div>
 </div>
@@ -58,8 +56,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					 </li>					
 					 <li><a href="presentation.html">Presentations</a></li>
+					 <li><a href="video.html">Videos</a></li>
 					 <li><a href="gallery.html">Gallery</a></li>
-					 <li class="active"><a href="contact.html">Contact Me</a></li>
+					 <li class="active"><a href="contact.html">Contact</a></li>
 				 </ul>
 				</div>
 			  <!--/.navbar collapse-->
@@ -68,7 +67,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	  </div>
 	 <div class="clearfix"></div>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		</div>
 </div>
 <!---->
@@ -175,7 +174,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---->
 <!--/animatedcss-->
 <script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
