--- a/pages/about.html
+++ b/pages/about.html
@@ -3,10 +3,8 @@
 <head>
 <title>Ramit Surana</title>
 <link href="../css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="../css/lightbox.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<!-- jQuery (necessary JavaScript plugins) -->
-<script src="../js/bootstrap.js"></script>
 <!-- Custom Theme files -->
 <link href="../css/style.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
@@ -20,7 +18,7 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
-<script src="js/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
 </head>
@@ -29,7 +27,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="top-header">
 	 <div class="container">
 		 <div class="logo">
-			 <h1><a href="index.html"><i class="fa fa-globe"></i> Home</a></h1>
+			 <h1><a href="../index.html"><i class="fa fa-home"></i> Home</a></h1>
 		 </div>		 
 	 </div>
 </div>
@@ -60,6 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					 </li>					
 					 <li><a href="presentation.html">Presentations</a></li>
+					 <li><a href="video.html">Videos</a></li>
 					 <li><a href="gallery.html">Gallery</a></li>
 					 <!--<li><a href="typo.html">Typography</a></li>-->
 					 <li><a href="contact.html">Contact</a></li>
@@ -71,7 +70,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	  </div>
 	 <div class="clearfix"></div>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		</div>
 </div>
 <!---->
@@ -149,56 +148,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 		 </div>
 	 </div>
-	 <!--teamstarts--> 
-<!--<div class="team">
-		<div class="team-top heading">
-				<h3>Our Team</h3>
-		</div>
-	 <div class="team-bottom">
-			<ul class="ch-grid">
-					<li>
-						<div class="ch-item ch-img-1">				
-							<div class="ch-info-wrap">
-								<div class="ch-info">
-									<div class="ch-info-front ch-img-1"></div>
-									<div class="ch-info-back">
-										<h3>Bears Type</h3>
-										<p>by Josh Schott</p>
-									</div>	
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="ch-item ch-img-2">
-							<div class="ch-info-wrap">
-								<div class="ch-info">
-									<div class="ch-info-front ch-img-2"></div>
-									<div class="ch-info-back">
-										<h3>Salon Spaces illustrations</h3>
-										<p>by Jeremy Slagle</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="ch-item ch-img-3">
-							<div class="ch-info-wrap">
-								<div class="ch-info">
-									<div class="ch-info-front ch-img-3"></div>
-									<div class="ch-info-back">
-										<h3>Leadership Series #3</h3>
-										<p>by Dustin Leer</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li>
-			</ul>
-	 </div>
-</div>
-</div>-->
 <!-- footer -->
 <div class="footer">
 	 <div class="container">
@@ -237,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!--/animatedcss-->
 <script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
@@ -250,14 +199,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--script-->
 <script type="text/javascript">
 		$(document).ready(function() {
-				/*
-				var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-				};
-				*/
 		$().UItoTop({ easingType: 'easeOutQuart' });
 });
 </script>
