--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -3,10 +3,8 @@
 <head>
 <title>Ramit Surana</title>
 <link href="../css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="../css/lightbox.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<!-- jQuery (necessary JavaScript plugins) -->
-<script src="../js/bootstrap.js"></script>
 <!-- Custom Theme files -->
 <link href="../css/style.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
@@ -16,11 +14,10 @@
 <!--//theme style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Goaway Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
-<script src="js/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
 </head>
@@ -29,7 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="top-header">
 	 <div class="container">
 		 <div class="logo">
-			 <h1><a href="https://ramitsurana.github.io"><i class="fa fa-globe"></i> Home</a></h1>
+			 <h1><a href="../index.html"><i class="fa fa-home"></i> Home</a></h1>
 		 </div>		 
 	 </div>
 </div>
@@ -60,6 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					 </li>					
 					 <li><a href="presentation.html">Presentations</a></li>
+					 <li><a href="video.html">Videos</a></li>
 					 <li class="active"><a href="gallery.html">Gallery</a></li>
 					 <!--<li><a href="typo.html">Typography</a></li>-->
 					 <li><a href="contact.html">Contact</a></li>
@@ -71,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	  </div>
 	 <div class="clearfix"></div>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		</div>
 </div>
 <!---->
@@ -86,22 +84,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 		<br></br>
 				<div class="gallery-1">									
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g3.jpeg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g3.jpeg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g3.jpeg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g4.jpeg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g4.jpeg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g4.jpeg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g5.jpeg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g5.jpeg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g5.jpeg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g6.jpeg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g6.jpeg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g6.jpeg" alt=""/></a>
 					</div>	
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g7.jpeg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g7.jpeg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g7.jpeg" alt=""/></a>
 					</div>				
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g8.jpeg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g8.jpeg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g8.jpeg" alt=""/></a>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -112,22 +110,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 	<br></br>
 				<div class="gallery-1">
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g14.jpg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g14.jpg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g14.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g13.jpg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g13.jpg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g13.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g12.jpg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g12.jpg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g12.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g11.jpg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g11.jpg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g11.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g10.jpg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g10.jpg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g10.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g9.jpg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g9.jpg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g9.jpg" alt=""/></a>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -138,17 +136,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 		<br></br>
 				<div class="gallery-1">
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g1.jpg" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g1.jpg" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g1.jpg" alt=""/></a>
 					</div>
 					<div class="col-md-3 gallery-grid">
-						<a class="example-image-link" href="../images/gallery/g2.png" data-lightbox="example-set"><img class="example-image" src="../images/gallery/g2.png" alt=""/></a>
+						<img class="example-image" src="../images/gallery/g2.png" alt=""/></a>
 					</div>					
 					<div class="clearfix"></div>
 				</div>				
 		 </div>
 	 </div>
 </div>	
-<script src="../js/lightbox-plus-jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/js/lightbox-plus-jquery.min.js"></script>
 <!-- footer -->
 <div class="footer">
 	 <div class="container">
@@ -187,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!--/animatedcss-->
 <script type="text/javascript" src="../js/move-top.js"></script>
-<script type="text/javascript" src="../js/easing.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
