--- a/pages/video.html
+++ b/pages/video.html
@@ -3,10 +3,8 @@
 <head>
 <title>Ramit Surana</title>
 <link href="../css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="../css/lightbox.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<!-- jQuery (necessary JavaScript plugins) -->
-<script src="../js/bootstrap.js"></script>
 <!-- Custom Theme files -->
 <link href="../css/style.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
@@ -29,7 +27,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="top-header">
 	 <div class="container">
 		 <div class="logo">
-			 <h1><a href="../index.html"><i class="fa fa-globe"></i> Home</a></h1>
+			 <h1><a href="../index.html"><i class="fa fa-home"></i> Home</a></h1>
 		 </div>		 
 	 </div>
 </div>
@@ -59,8 +57,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="index.html">Raspberry Pi</a></li>
 						</ul>
 					 </li>					
-					 <li><a href="presentation.html">Presentation</a></li>
-					 <li class="active"><a href="video.html">Talks</a></li>
+					 <li><a href="presentation.html">Presentation</a></li>					
+					 <li class="active"><a href="video.html">Videos</a></li>
 					 <li><a href="gallery.html">Gallery</a></li>
 					 <li><a href="contact.html">Contact</a></li>
 				 </ul>
@@ -71,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	  </div>
 	 <div class="clearfix"></div>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		</div>
 </div>
 <!---->
@@ -144,7 +142,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>
 	 </div>
 </div>	
-<script src="../js/lightbox-plus-jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/js/lightbox-plus-jquery.min.js"></script>
 <!-- footer -->
 <div class="footer">
 	 <div class="container">
@@ -177,13 +175,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <div class="copywrite">
 	 <div class="container">
-			 <p> © 2016 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+			 <p> © 2014 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
 	 </div>
 </div>
 
 <!--/animatedcss-->
 <script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
